# drone-hangar-simulator

./: CMakeLists.txt  README.md  main.cpp  state.json
.github/workflows/: ci.yml
demo/: demo.cpp
simulator/: DockSimulator.cpp  DockSimulator.hpp  StateMachine.cpp  StateMachine.hpp
tests/: test_DockSimulator_full.cpp
